--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,18 @@
 .carousel.carousel-slider .control-arrow:hover{
     background-color: transparent;
 }
+
+/* BISTRO GALLERY */
+.gallery{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+
+    @media screen and (max-width: 1000px){
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media screen and (max-width: 800px){
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
