--- a/app/globals.css
+++ b/app/globals.css
@@ -8,3 +8,18 @@
   box-sizing: border-box;
   /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
 }
+
+/* BISTRO GALLERY */
+.gallery{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+
+  @media screen and (max-width: 1000px){
+      grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media screen and (max-width: 800px){
+      grid-template-columns: repeat(1, 1fr);
+  }
+}
